Bug 165912 - AIM and yahoo crash when closing progress box after looking at url
Summary: AIM and yahoo crash when closing progress box after looking at url
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 156554 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-07 03:43 UTC by A. Spehr
Modified: 2008-07-07 12:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description A. Spehr 2008-07-07 03:43:24 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc version 4.3.1 (Debian 4.3.1- 
OS:                Linux

In AIM or yahoo, after a url is sent to me in chat
I click on it
look at the site, close the site
I still have a (loading) "progress dialog" up

progress dialog: 
	source: 
	destination: [pause] [cancel]

I click on [cancel] (why would I pause? its already closed) to make the box go away, and kopete crashes leaving this backtrace:

Application: Kopete (kopete), signal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb5353b60 (LWP 25234)]
[New Thread 0xb0da0b90 (LWP 25249)]
[KCrash handler]
#6  0x00000051 in ?? ()
#7  0xb6e2d3c0 in KJob::kill (this=0x9720570, verbosity=KJob::EmitResult)
    at /home/ax4/kde/src/KDE/kdelibs/kdecore/jobs/kjob.cpp:106
#8  0xb737063c in KAbstractWidgetJobTracker::slotStop (this=0x97ada88, 
    job=0x9720570)
    at /home/ax4/kde/src/KDE/kdelibs/kdeui/jobs/kabstractwidgetjobtracker.cpp:126
#9  0xb7373b8e in KWidgetJobTracker::Private::ProgressWidget::_k_stop (
    this=0x9c1fbe0)
    at /home/ax4/kde/src/KDE/kdelibs/kdeui/jobs/kwidgetjobtracker.cpp:627
#10 0xb7373dd9 in KWidgetJobTracker::Private::ProgressWidget::qt_metacall (
    this=0x9c1fbe0, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0xbffa77cc)
    at /home/ax4/kde/build/KDE/kdelibs/kdeui/kwidgetjobtracker_p.moc:101
#11 0xb6b0fb08 in QMetaObject::activate (sender=0x9c20f78, 
    from_signal_index=29, to_signal_index=30, argv=0xbffa77cc)
    at kernel/qobject.cpp:3007
#12 0xb6b0fd20 in QMetaObject::activate (sender=0x9c20f78, m=0xb64f25e4, 
    from_local_signal_index=2, to_local_signal_index=3, argv=0xbffa77cc)
    at kernel/qobject.cpp:3100
#13 0xb6417a2c in QAbstractButton::clicked (this=0x9c20f78, _t1=false)
    at .moc/debug-shared/moc_qabstractbutton.cpp:185
#14 0xb616c594 in QAbstractButtonPrivate::emitClicked (this=0x9c20ff0)
    at widgets/qabstractbutton.cpp:543
#15 0xb616d798 in QAbstractButtonPrivate::click (this=0x9c20ff0)
    at widgets/qabstractbutton.cpp:536
#16 0xb616da44 in QAbstractButton::mouseReleaseEvent (this=0x9c20f78, 
    e=0xbffa7f64) at widgets/qabstractbutton.cpp:1112
#17 0xb5e51d30 in QWidget::event (this=0x9c20f78, event=0xbffa7f64)
    at kernel/qwidget.cpp:6927
#18 0xb616c52f in QAbstractButton::event (this=0x9c20f78, e=0xbffa7f64)
    at widgets/qabstractbutton.cpp:1074
#19 0xb621e7e5 in QPushButton::event (this=0x9c20f78, e=0xbffa7f64)
    at widgets/qpushbutton.cpp:658
#20 0xb5df3d95 in QApplicationPrivate::notify_helper (this=0x93447a0, 
    receiver=0x9c20f78, e=0xbffa7f64) at kernel/qapplication.cpp:3772
#21 0xb5df4917 in QApplication::notify (this=0xbffa8710, receiver=0x9c20f78, 
    e=0xbffa7f64) at kernel/qapplication.cpp:3501
#22 0xb737ee3b in KApplication::notify (this=0xbffa8710, receiver=0x9c20f78, 
    event=0xbffa7f64)
    at /home/ax4/kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:311
#23 0xb6afaf67 in QCoreApplication::notifyInternal (this=0xbffa8710, 
    receiver=0x9c20f78, event=0xbffa7f64) at kernel/qcoreapplication.cpp:583
#24 0xb7b4b2d9 in QCoreApplication::sendSpontaneousEvent (receiver=0x9c20f78, 
    event=0xbffa7f64) at ../../include/QtCore/qcoreapplication.h:218
#25 0xb5df870a in QApplicationPrivate::sendMouseEvent (receiver=0x9c20f78, 
    event=0xbffa7f64, alienWidget=0x9c20f78, nativeWidget=0x9c1fbe0, 
    buttonDown=0xb650f720, lastMouseReceiver=@0xb650f724)
    at kernel/qapplication.cpp:2766
#26 0xb5e704ee in QETWidget::translateMouseEvent (this=0x9c1fbe0, 
    event=0xbffa8450) at kernel/qapplication_x11.cpp:4133
#27 0xb5e71215 in QApplication::x11ProcessEvent (this=0xbffa8710, 
    event=0xbffa8450) at kernel/qapplication_x11.cpp:3133
#28 0xb5e9ac2d in x11EventSourceDispatch (s=0x9347370, callback=0, 
    user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:148
#29 0xb560e978 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#30 0xb5611bce in ?? () from /usr/lib/libglib-2.0.so.0
#31 0x09346898 in ?? ()
#32 0x00000000 in ?? ()
#0  0xb7f8e430 in __kernel_vsyscall ()
Comment 1 A. Spehr 2008-07-07 04:07:57 UTC
http://bugs.kde.org/show_bug.cgi?id=156554 (gwenview) (currently marked unconfirmed)
http://bugs.kde.org/show_bug.cgi?id=154925 (kdelibs) just marked FIXED, but unless I'm on crack, I should have higher than that rev...

Suggesting this is lower level...

Comment 2 Rafael Fernández López 2008-07-07 04:22:40 UTC
Hi, no, you are not on crack, #154925 is a delete/move operation, what has been already fixed. It seems stat operation is not emitting a needed signal, so for that reason you are having that dialog not dissappearing and crashing when closing the dialog. This is an open issue for this bug. I will move this bug to kdelibs-bugs and mark the others as duplicated. Thanks.
Comment 3 Rafael Fernández López 2008-07-07 04:23:48 UTC
*** Bug 156554 has been marked as a duplicate of this bug. ***
Comment 4 Rafael Fernández López 2008-07-07 12:29:10 UTC
SVN commit 829036 by ereslibre:

Obviously when the job was killed quietly we were never receiving result() signal. We need to connect to finish. Thanks David for the great hint :)

BUG: 165912


 M  +2 -2      kjobtrackerinterface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=829036