Obviously when the job was killed quietly we were never receiving result() signal. We need to connect to finish. Thanks David for the great hint :)

BUG: 165912

svn path=/trunk/KDE/kdelibs/; revision=829036